Chapter 8: fixed table borders not showing up Removed WIP tag in main index

--- a/ch8/pacific.css
+++ b/ch8/pacific.css
@@ -127,6 +127,7 @@ section {
 
 table {
     margin: auto;
+    border-style: solid;
     border-width: 1px;
     border-color: #3399CC;
     width: 90%;
@@ -134,6 +135,7 @@ table {
 }
 td, th {
     padding: 5px;
+    border-style: solid;
     border-width: 1px;
     border-color: #3399CC;
 }
